--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#f7b71d">
+  <meta name="description" content="Aplikasi web sederhana yang berisi daftar developer dan programmer JavaScript dari Indonesia yang Awesome"/>
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
