Perbaikan bahasa dan index html

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,17 @@
   <title>Awesome Indonesia JS Developer</title>
   <base href="/">
 
+  <meta>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#f7b71d">
   <meta name="description" content="Aplikasi web sederhana yang berisi daftar developer dan programmer JavaScript dari Indonesia yang Awesome"/>
+
+  <meta name="og:title" property="og:title" content="Awesome Indonesia JS Developer">
+  <meta name="og:description" property="og:description" content="Aplikasi web sederhana yang berisi daftar developer dan programmer JavaScript dari Indonesia yang Awesome">
+  <meta name="og:image" property="og:image" content="https://raw.githubusercontent.com/javascript-indonesias/AwesomeJSDevIdSource/master/previewpage.png">
+
 </head>
 <body>
   <app-root></app-root>
